# racers

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.md  reccmp-project.yml
.github/workflows/: build.yml  racersbin.yml
GolDP/: library_msvc.h  main.cpp
GolDP/include/: amberlens0x344.h  amberlensbase0x120.h  awakekite0x20.h  azureridge0x38.h  bronzedune0x4c.h  bronzefalcon0xc8770.h  floatybarge0x4c.h  floatypontoon0x4c.h  fluffygloomkins0x118.h  gdbvertexarray0xc.h  gdbvertexarraymistery0x1c.h  gdbvertexarraytypeone0x1c.h  gdbvertexarraytypethree0x20.h  gdbvertexarraytypetwo0x20.h  gol.h  golcommondrawstate.h  golddune0x38.h  goldevicelist.h  goldpexport.h  goldrawdpstate.h  goldrawstate.h  golfont0xa0.h  golfontbase0x40.h  hypnoticnoise0x1c.h  igdbmodel0x40.h  igdbmodelindexarray0x8.h  purpledune0x7c.h  shadowwolf0xc.h  silverdune0x30.h  slatepeak0x58.h  smallcocoon0xc.h  utopianpan0xa4.h  velvetthunder0xc8ac8.h  whitebaffoon0x50.h  whitefalcon0x140.h  zoweeblubberworth0xf0.h
GolDP/include/image/: whitebaffoon0x50.h
GolDP/include/material/: materialtable0x0c.h
GolDP/include/mesh/: gdbmodelindexarray0xc.h
GolDP/include/render/: golrasterizers1.h  golrenderdevice.h
GolDP/include/surface/: golddune0x38.h  purpledune0x7c.h
GolDP/include/world/: golworlddatabase.h
GolDP/src/: amberlens0x344.cpp  amberlensbase0x120.cpp  awakekite0x20.cpp  azureridge0x38.cpp  bronzefalcon0xc8770.cpp  floatybarge0x4c.cpp  floatypontoon0x4c.cpp  fluffygloomkins0x118.cpp  gdbmodel0x48.cpp  gdbmodelindexarray0xc.cpp  gdbmodelindexarray0xc.h  gdbvertexarray0xc.cpp  gdbvertexarraymistery0x1c.cpp  gdbvertexarraytypeone0x1c.cpp  gdbvertexarraytypethree0x20.cpp  gdbvertexarraytypetwo0x20.cpp  golcommondrawstate.cpp  golddune0x38.cpp  goldevicelist.cpp  goldpexport.cpp  goldrawdpstate.cpp  goldrawstate.cpp  golfont0xa0.cpp  hypnoticnoise0x1c.cpp  igdbmodel0x40.cpp  main.cpp  purpledune0x7c.cpp  shadowwolf0xc.cpp  silverdune0x30.cpp  slatepeak0x58.cpp  smallcocoon0xc.cpp  unk0x10056440.cpp  utopianpan0xa4.cpp  zoweeblubberworth0xf0.cpp
GolDP/src/font/: golfontbase0x40.cpp
GolDP/src/material/: goltexturelist.cpp
GolDP/src/render/: golrasterizers1.cpp  golrenderdevice.cpp
LEGORacers/: amberwolf152.cpp  amberwolf152.h  cobaltmist48.cpp  cobaltmist48.h  ironflame2372.cpp  ironflame2372.h  library_msvc.h  main.cpp  neoncactus7532.cpp  neoncactus7532.h  racers.rc  racers_resource.h
LEGORacers/include/: amberwolf0x98.h  amethystwake0x4dd4.h  aquacoral0x37b8.h  aquamarinespirit0x3c.h  azurespark0x0c.h  bluebellfog0x4.h  cactusinterface0x4.h  celestialforge0x48.h  ceruleanemperor0x4c.h  ceruleanknight0x20.h  ceruleanqueen0x58.h  ceruleansubject0x0c.h  chromespike0x4.h  citrinegrove0x1f4c.h  cobaltmist0x30.h  coppercrest0x40.h  coralbreeze0x28.h  corundumpeak0x14.h  crimsonforge0x800.h  crimsonpebble0x228.h  crimsonray0x20.h  crimsonsun0xa4.h  diamondcloud0xc.h  directinputdevice.h  directinputmanager.h  emberdust0x28.h  frostpetal0x34.h  garnetflare0x60.h  glassblock0x3368.h  glassshard0x3b8.h  glassstream0x94.h  golapp.h  goldenoak0x128.h  imaginarychisel0x658.h  imaginarydrillfieldat0x498.h  imaginarynotion0x290.h  imaginarytool0x368.h  imaginarywrench0x23bc.h  indigostar0x18.h  inputdevice.h  (+43 more)
LEGORacers/include/app/: golapp.h  legoracers.h  main.h  win32golapp.h
LEGORacers/include/audio/: amberleaf0x10.h  coralbreeze0x28.h  crimsonray0x20.h  directmusicgroup.h  directsoundconversions.h  directsoundgroup.h  directsoundmanager.h  emberdust0x28.h  frostpetal0x34.h  goldenoak0x128.h  musicgroup.h  musicgroupbase.h  musicinstance.h  musicinstancebase.h  nullmusicgroup.h  nullsoundgroup.h  nullsoundmanager.h  opalstar0x20.h  rubyhaze0x08.h  soundbuffer.h  soundgroup.h  soundgroupbinding.h  soundinstance.h  soundinstancebase0x38.h  soundmanager.h  soundnode.h  spatialsoundinstance.h  streamingsoundinstance.h
LEGORacers/include/input/: inputdevice.h  inputeventqueue.h  inputmanager.h  joystickdevice.h
LEGORacers/src/: amberlensbase0x120.cpp  amberwolf0x98.cpp  amethystwake0x4dd4.cpp  aquacoral0x37b8.cpp  aquamarinespirit0x3c.cpp  azurespark0x0c.cpp  bronzefalcon0xc8770.cpp  celestialforge0x48.cpp  ceruleanemperor0x4c.cpp  ceruleanknight0x20.cpp  ceruleanqueen0x58.cpp  ceruleansubject0x0c.cpp  chromespike0x4.cpp  citrinegrove0x1f4c.cpp  cobaltmist0x30.cpp  coppercrest0x40.cpp  corundumpeak0x14.cpp  crimsonforge0x800.cpp  crimsonpebble0x228.cpp  crimsonpebbletext0x70.cpp  crimsonpebblevisual0x58.cpp  crimsonray0x20.cpp  crimsonsun0xa4.cpp  diamondcloud0xc.cpp  directinputdevice.cpp  directinputmanager.cpp  frostpetal0x34.cpp  garnetflare0x60.cpp  glassblock0x3368.cpp  glassshard0x3b8.cpp  glassstream0x94.cpp  golapp.cpp  goldenoak0x128.cpp  guids.cpp  imaginarydrillfieldat0x498.cpp  imaginarynotion0x290.cpp  imaginarytool0x368.cpp  imaginarywrench0x23bc.cpp  indigostar0x18.cpp  inputdevice.cpp  (+39 more)
cmake/: download-file.cmake
common/include/: azureclip0x24.h  golanimatedentity.h  golbinparser.h  golbmpfile.h  goldirentry.h  golerror.h  golfile.h  golfileparser.h  golfilesource.h  golfontbase.h  golfsutil.h  golhashtable.h  golimgfile.h  gollist.h  golmath.h  golorientedentity.h  golstream.h  golstring.h  goltgafile.h  goltxtparser.h  mabmaterialanimationitem0x18.h  mabmaterialanimationitem0x8.h  smallcocoon0xc.h
common/src/: azureclip0x24.cpp  golbillboardfield0x2c.cpp  golbinparser.cpp  golbmpfile.cpp  golbmpwriterfile.cpp  goldirentry.cpp  golerror.cpp  golfile.cpp  golfileparser.cpp  golfilesource.cpp  golfontbase.cpp  golfsutil.cpp  golhashtable.cpp  golimgfile.cpp  golmath.cpp  golmodelentity.cpp  golorientedentity.cpp  golstream.cpp  golstring.cpp  golsurfaceformat.cpp  goltgafile.cpp  goltxtparser.cpp  mabmaterialanimationitem0x18.cpp  materialtable0x0c.cpp  smallcocoon0xc.cpp  whitefalcon0x140materialcolor.cpp
docker/: Dockerfile  entrypoint.sh
reccmp/: lego-racers-ascii.csv  lego-racers-dxguid.csv  lego-racers-floats.csv
tools/: check_folded.py  reccmp_addr_padding.py
tools/ncc/: ncc.py  ncc.style  skip.yml
util/: decomp.h  types.h
(+351 files in other folders)
